attempting to fix issues with padding and word-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@ body {
 }
 
 .navbar-brand {
-    color :white
+    color :white;
+    height : 30px
 }
 
 .flex-container {
@@ -33,17 +34,19 @@ img {
 .bio {
     font-size: 140%;
     text-align: left;
-    display: inline;
     margin: 15px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    word-wrap: break-word;
 }
 
 .card-link {
     text-decoration: underline;
-    align-self: center;
-    margin: 0 20px 0 20px;
+    text-align: center;
+    margin: 0 30px 0 30px;
 }
-
+ .card-header {
+     padding: 1rem !important;
+ }
  /* footer */
  footer {
     width: 100%;
